--- a/Tensorflow.ipynb
+++ b/Tensorflow.ipynb
@@ -6,7 +6,7 @@
       "name": "GCP.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOQh1z5vnR3/Pogp60YWITt",
+      "authorship_tag": "ABX9TyO4oj7WmOnuiX7MW/0Rh/0j",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,6 +29,42 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "LK7IPjFRyPi4"
+      },
+      "source": [
+        "# TensorFlow and Deep Learning fundamentals with Python videos\n",
+        "* https://www.youtube.com/watch?v=tpCFfeUEGs8&t=3221s\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "AcJ77NQKyfVX"
+      },
+      "source": [
+        "* tf.constant: shape & dimensions of tensors, mention data type\n",
+        "* tf.Varible: assign/modify values\n",
+        "* random tensor generator: uniform, normal distribution\n",
+        "* tf.ones(shape=(3, 2)); tf.zeros(shape=(3, 2))\n",
+        "* shuffle a tensor: shuffling is important for NN as we want the model to not see a continous flow of images of same category, it will impact how the model learns - matrix is shuffled based on rows\n",
+        "  * To shuffle in the same order: we need to Set the global random seed using tf.random.set_seed(42), before using it in ft.random.shuffle(matrix, seed=42)\n",
+        "* Turn arrays into tensors\n",
+        "* Indexing Tensors\n",
+        "* tf.cast(X, dtype=tf.float16) : change data type of tensor\n",
+        "* tf.abs(X)\n",
+        "* tf.reduce_min() - find the minimum value in a tensor.\n",
+        "* tf.reduce_max() - find the maximum value in a tensor (helpful for when you want to find the highest prediction probability).\n",
+        "* tf.reduce_mean() - find the mean of all elements in a tensor.\n",
+        "* tf.reduce_sum() - find the sum of all elements in a tensor.\n",
+        "* tf.argmax() - find the position of the maximum element in a given tensor.\n",
+        "* tf.argmin() - find the position of the minimum element in a given tensor.\n",
+        "\n"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "oCqRPWk7-kBG"
@@ -37,7 +73,7 @@
         "import numpy as np\n",
         "import tensorflow as tf"
       ],
-      "execution_count": 73,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -55,7 +91,7 @@
         "Tips = px.data.tips()\n",
         "Tips.head()"
       ],
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -172,7 +208,7 @@
       "source": [
         "Tips.describe()"
       ],
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -285,7 +321,7 @@
       "source": [
         "Tips['sex'].value_counts()"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -315,7 +351,7 @@
       "source": [
         "Tips['sex'].value_counts(0)"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -343,7 +379,7 @@
         "Tips_shallowcopy = Tips.copy()\n",
         "Tips_deepcopy = Tips.copy(deep=True)"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -354,7 +390,7 @@
       "source": [
         "Tips['tips_10perc_inc'] = Tips['tip']*1.1"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -370,7 +406,7 @@
       "source": [
         "Tips.head(2)"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -457,7 +493,7 @@
       "source": [
         "Tips_copy.head(2)"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -539,7 +575,7 @@
       "source": [
         "Tips_shallowcopy['tips_10perc_inc'] = Tips_shallowcopy['tip']*1.5"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -555,7 +591,7 @@
       "source": [
         "Tips_shallowcopy.head(2)"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -642,7 +678,7 @@
       "source": [
         "Tips_deepcopy.head(2)"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -731,7 +767,7 @@
         "  print(row)\n",
         "  print(\"Tip value for the row is:\",row[\"tip\"])  # to extract value of the column for that row"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -777,7 +813,7 @@
         "auth.authenticate_user()\n",
         "print('Authenticated')"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -800,7 +836,7 @@
         "FROM `bigquery-public-data.new_york_taxi_trips.tlc_fhv_trips_2016` # TODO 1\n",
         "LIMIT 10"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -816,7 +852,7 @@
       "source": [
         "TaxiTrips.head()"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -937,7 +973,7 @@
         "\n",
         "    return df_process[qc]"
       ],
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -954,7 +990,7 @@
         "print(Tips_qc.describe(),\"\\n\")\n",
         "print(Tips_qc.shape, \"of\", Tips.shape, \" rows remained\")"
       ],
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -988,7 +1024,7 @@
         "# Gives out values from 0 to len(Tips_qc)\n",
         "np.arange(0, len(Tips_qc))"
       ],
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1037,7 +1073,7 @@
         "features.append([\"X4\",\"X5\",\"X6\"])\n",
         "print(features)"
       ],
-      "execution_count": 72,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1070,7 +1106,7 @@
       "source": [
         "tf.zeros([3, 2, 4, 5])"
       ],
-      "execution_count": 75,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1130,7 +1166,7 @@
         "Ones_matrix = tf.ones([4, 5])\n",
         "Ones_matrix"
       ],
-      "execution_count": 79,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1176,7 +1212,7 @@
         "print(\"Elements along the last axis of tensor:\", Ones_matrix.shape[-1])\n",
         "print(\"Total number of elements (3*2*4*5): \", tf.size(Ones_matrix).numpy())"
       ],
-      "execution_count": 82,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1217,7 +1253,7 @@
         "print(\"Every other item:\", rank_1_tensor[::2].numpy())\n",
         "print(\"Reversed:\", rank_1_tensor[::-1].numpy())"
       ],
-      "execution_count": 83,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1262,7 +1298,7 @@
         "print(\"Skip the first row:\")\n",
         "print(rank_2_tensor[1:, :].numpy(), \"\\n\")"
       ],
-      "execution_count": 93,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1314,7 +1350,7 @@
         "print(tf.reshape(rank_2_tensor, [2,4]),\"\\n\")\n",
         "print(tf.reshape(rank_2_tensor, [2,2,2]),\"\\n\")"
       ],
-      "execution_count": 95,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1359,7 +1395,7 @@
         "print(tf.reshape(rank_2_tensor, [2,2,2]),\"\\n\")\n",
         "print(tf.reshape(rank_2_tensor, [-1]),\"\\n\")"
       ],
-      "execution_count": 96,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1408,7 +1444,7 @@
         "print(tf.transpose(tf.reshape(rank_2_tensor, [2,2,2])),\"\\n\")\n",
         "print(tf.transpose(tf.reshape(rank_2_tensor, [-1])),\"\\n\")"
       ],
-      "execution_count": 106,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1472,7 +1508,7 @@
         "print(tf.reshape(rank_3_tensor, [3*2, 5]), \"\\n\")\n",
         "print(tf.reshape(rank_3_tensor, [3, -1]), \"\\n\")  # shape=(3, 10) ==> -1 is automatic"
       ],
-      "execution_count": 97,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1527,7 +1563,7 @@
         "the_u8_tensor = tf.cast(the_f16_tensor, dtype=tf.uint8)\n",
         "print(the_u8_tensor)"
       ],
-      "execution_count": 107,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1551,7 +1587,7 @@
         "# [1,3] shaped tensor is converted to [3,3] shape\n",
         "print(tf.broadcast_to(tf.constant([1, 2, 3]), [3, 3]))"
       ],
-      "execution_count": 108,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1580,7 +1616,7 @@
         "print(scalar_string_tensor)\n",
         "print(tf.strings.split(scalar_string_tensor, sep=\" \"))"
       ],
-      "execution_count": 109,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1610,7 +1646,7 @@
         "print(tensor_of_strings)\n",
         "print(tf.strings.split(tensor_of_strings))"
       ],
-      "execution_count": 110,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1646,7 +1682,7 @@
         "x.assign_sub(3) \n",
         "print(x)"
       ],
-      "execution_count": 115,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1681,7 +1717,7 @@
         "# tf.math.exp expects floats so we need to explicitly give the type\n",
         "# tf.math.exp(a)"
       ],
-      "execution_count": 126,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1730,7 +1766,7 @@
         "raw_train_data = get_dataset(train_file_path)\n",
         "raw_test_data = get_dataset(test_file_path)"
       ],
-      "execution_count": 117,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
