--- a/Tensorflow.ipynb
+++ b/Tensorflow.ipynb
@@ -6,7 +6,7 @@
       "name": "GCP.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyO4oj7WmOnuiX7MW/0Rh/0j",
+      "authorship_tag": "ABX9TyMHL123kQ4FRVQbYv8jzrII",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -36,6 +36,8 @@
       "source": [
         "# TensorFlow and Deep Learning fundamentals with Python videos\n",
         "* https://www.youtube.com/watch?v=tpCFfeUEGs8&t=3221s\n",
+        "* https://github.com/mrdbourke/tensorflow-deep-learning\n",
+        "* https://colab.research.google.com/github/sandhyaparna/Python-DataScience-CookBook/blob/master/Tensorflow.ipynb\n",
         "\n"
       ]
     },
@@ -61,7 +63,61 @@
         "* tf.reduce_sum() - find the sum of all elements in a tensor.\n",
         "* tf.argmax() - find the position of the maximum element in a given tensor.\n",
         "* tf.argmin() - find the position of the minimum element in a given tensor.\n",
-        "\n"
+        "\n",
+        "\n",
+        "* tf.function: use @tf.function before defining a function\n",
+        "* compare between different models\n",
+        "  * Tensor Board: https://tensorboard.dev/\n",
+        "  * Weights & Biases: https://wandb.ai/site\n",
+        "* model_name.save(\"path\")\n",
+        "* "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "NrzUZTENVps1"
+      },
+      "source": [
+        "| **Hyperparameter** | **Typical value** |\n",
+        "| --- | --- |\n",
+        "| Input layer shape | Same shape as number of features (e.g. 3 for # bedrooms, # bathrooms, # car spaces in housing price prediction) |\n",
+        "| Hidden layer(s) | Problem specific, minimum = 1, maximum = unlimited |\n",
+        "| Neurons per hidden layer | Problem specific, generally 10 to 100 |\n",
+        "| Output layer shape | Same shape as desired prediction shape (e.g. 1 for house price) |\n",
+        "| Hidden activation | Usually [ReLU](https://www.kaggle.com/dansbecker/rectified-linear-units-relu-in-deep-learning) (rectified linear unit) |\n",
+        "| Output activation | None, ReLU, logistic/tanh |\n",
+        "| Loss function | [MSE](https://en.wikipedia.org/wiki/Mean_squared_error) (mean square error) or [MAE](https://en.wikipedia.org/wiki/Mean_absolute_error) (mean absolute error)/Huber (combination of MAE/MSE) if outliers |\n",
+        "| Optimizer | [SGD](https://www.tensorflow.org/api_docs/python/tf/keras/optimizers/SGD) (stochastic gradient descent), [Adam](https://www.tensorflow.org/api_docs/python/tf/keras/optimizers/Adam) |\n",
+        "\n",
+        "| **Hyperparameter** | **Binary Classification** | **Multiclass classification** |\n",
+        "| --- | --- | --- |\n",
+        "| Input layer shape | Same as number of features (e.g. 5 for age, sex, height, weight, smoking status in heart disease prediction) | Same as binary classification |\n",
+        "| Hidden layer(s) | Problem specific, minimum = 1, maximum = unlimited | Same as binary classification |\n",
+        "| Neurons per hidden layer | Problem specific, generally 10 to 100 | Same as binary classification |\n",
+        "| Output layer shape | 1 (one class or the other) | 1 per class (e.g. 3 for food, person or dog photo) |\n",
+        "| Hidden activation | Usually [ReLU](https://www.kaggle.com/dansbecker/rectified-linear-units-relu-in-deep-learning) (rectified linear unit) | Same as binary classification |\n",
+        "| Output activation | [Sigmoid](https://en.wikipedia.org/wiki/Sigmoid_function) | [Softmax](https://en.wikipedia.org/wiki/Softmax_function) |\n",
+        "| Loss function | [Cross entropy](https://en.wikipedia.org/wiki/Cross_entropy#Cross-entropy_loss_function_and_logistic_regression) ([`tf.keras.losses.BinaryCrossentropy`](https://www.tensorflow.org/api_docs/python/tf/keras/losses/BinaryCrossentropy) in TensorFlow) | Cross entropy ([`tf.keras.losses.CategoricalCrossentropy`](https://www.tensorflow.org/api_docs/python/tf/keras/losses/CategoricalCrossentropy) in TensorFlow) |\n",
+        "| Optimizer | [SGD](https://www.tensorflow.org/api_docs/python/tf/keras/optimizers/SGD) (stochastic gradient descent), [Adam](https://www.tensorflow.org/api_docs/python/tf/keras/optimizers/Adam) | Same as binary classification |"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "QzUKTociIijV"
+      },
+      "source": [
+        ""
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "jHJprhQmQItv"
+      },
+      "source": [
+        ""
       ]
     },
     {
@@ -73,7 +129,7 @@
         "import numpy as np\n",
         "import tensorflow as tf"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -1093,6 +1149,125 @@
       "source": [
         "### Tensorflow"
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "wGkiUve9QXHK",
+        "outputId": "6dad35fe-847c-413a-fe72-800605aaf437",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "@tf.function\n",
+        "def f(x):\n",
+        "  if tf.reduce_sum(x) > 0:\n",
+        "    return x * x\n",
+        "  else:\n",
+        "    return -x // 2\n",
+        "f(tf.constant(-2))"
+      ],
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(), dtype=int32, numpy=1>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 6
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "F8Fs1wicHgOJ",
+        "outputId": "0f2ecc70-0e87-4c06-aa7c-27432c7244f7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "tf.constant(np.random.randint(low=0, high=100, size=50))"
+      ],
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(50,), dtype=int64, numpy=\n",
+              "array([94, 90, 77,  0,  6, 92, 92, 39, 86, 52, 56, 48, 41, 31, 30, 16, 53,\n",
+              "       24, 13, 16, 45, 80, 86, 89, 83, 15, 95,  8, 75, 19, 93, 41, 89, 44,\n",
+              "       22, 96, 23, 51, 54, 27, 71,  9, 95, 93, 71, 90, 93, 77,  9, 58])>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 3
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ILhxSKYcHlfI",
+        "outputId": "a74f527b-9c93-4fd3-e386-c865ee372376",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "F = tf.constant(np.random.random(50))\n",
+        "F"
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(50,), dtype=float64, numpy=\n",
+              "array([0.14461532, 0.47998683, 0.05242564, 0.00252278, 0.72190747,\n",
+              "       0.85516836, 0.78986885, 0.05670708, 0.45445711, 0.22701807,\n",
+              "       0.35241043, 0.11043303, 0.85949368, 0.64855534, 0.56846399,\n",
+              "       0.6087659 , 0.7441141 , 0.43281527, 0.01802605, 0.03769644,\n",
+              "       0.8536098 , 0.14645528, 0.9124743 , 0.84914022, 0.84202672,\n",
+              "       0.90937323, 0.42958974, 0.83355397, 0.74647532, 0.19296946,\n",
+              "       0.70388297, 0.75868233, 0.12808828, 0.61737789, 0.76893558,\n",
+              "       0.87983249, 0.71547245, 0.76292438, 0.4222632 , 0.93577446,\n",
+              "       0.21723343, 0.26656408, 0.10292476, 0.69702024, 0.08587017,\n",
+              "       0.43696642, 0.29125902, 0.62991896, 0.34842642, 0.94315404])>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 5
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "R2_9EHLzHsDb"
+      },
+      "source": [
+        "# Find the maximum element position of F\n",
+        "print(f\"The maximum value of F is at position: {tf.argmax(F).numpy()}\") \n",
+        "print(f\"The maximum value of F is: {tf.reduce_max(F).numpy()}\") \n",
+        "print(f\"Using tf.argmax() to index F, the maximum value of F is: {F[tf.argmax(F)].numpy()}\")\n",
+        "print(f\"Are the two max values the same (they should be)? {F[tf.argmax(F)].numpy() == tf.reduce_max(F).numpy()}\")"
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
